Modification de la variable n pour ajuster la taille de la grille et amélioration de la structure HTML pour l'affichage des cellules.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Alignia</title>
 </head>
 <body>
-    
+    <div id="grille"></div>
+
     <script src="scripts.js"></script>
 </body>
 </html>
