--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alignia</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <!-- Formulaire de parametre -->
+    <div>
+      <label>Taille de la grille (n) : </label>
+      <input type="number" id="taille" value="3" min="2" />
+      <button onclick="changerTaille()">Appliquer</button>
+    </div>
+
     <div id="grille"></div>
 
     <script src="scripts.js"></script>
-</body>
+  </body>
 </html>
