Modification du bouton d'application pour utiliser un ID et suppression de la valeur par défaut dans la création de la grille

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
       <label>Taille de la grille (n) : </label>
       <input type="number" id="taille" value="3" min="2" />
-      <button onclick="changerTaille()">Appliquer</button>
+      <button id="appliquer">Appliquer</button>
     </div>
 
     <div id="grille"></div>
