--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <body>
     <!-- Formulaire de parametre -->
     <div>
-      <label>Taille de la grille (n) : </label>
-      <input type="number" id="taille" value="3" min="2" />
+      <label for="taille">Taille de la grille (n) : </label>
+      <input type="number" id="taille" value="3" min="3" />
+      <label for="nbr-lignes-a-gagner">Nombre de lignes à gagner : </label>
+      <input type="number" id="nbr-lignes-a-gagner" value="3" min="3" />
       <button id="appliquer">Appliquer</button>
     </div>
 
