Ajout de la gestion des scores pour les joueurs X et O, avec mise à jour de l'affichage lors des victoires.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
 
     <div id="grille"></div>
 
+    <div>
+        <p>Scores:</p>
+        <div>
+            <span>X: </span>
+            <span id="X-score">0</span>
+        </div>
+        <div>
+            <span>O: </span>
+            <span id="O-score">0</span>
+        </div>
+    </div>
+
     <script src="scripts.js"></script>
   </body>
 </html>
