Initialisation des scores des joueurs X et O avec affichage depuis LocalStorage

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <p>Scores:</p>
         <div>
             <span>X: </span>
-            <span id="X-score">0</span>
+            <span id="X-score"></span>
         </div>
         <div>
             <span>O: </span>
-            <span id="O-score">0</span>
+            <span id="O-score"></span>
         </div>
     </div>
 
