Ajout de la fonctionnalité de réinitialisation du jeu avec le bouton "Recommencer" pour réinitialiser les scores et la grille.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         </div>
     </div>
 
+    <div>
+        <button id="restart">Recommencer</button>
+    </div>
+
     <script src="scripts.js"></script>
   </body>
 </html>
