Ajout de la fonctionnalité pour effacer les scores des joueurs et mise à jour du texte du bouton "Recommencer le jeu".

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     </div>
 
     <div>
-        <button id="restart">Recommencer</button>
+        <button id="restart">Recommencer le jeu</button>
+        <button id="effacer-scores">Effacer les scores</button>
     </div>
 
     <script src="scripts.js"></script>
