Indiquer clairement le joueur actif

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <button id="effacer-scores"><img src="https://img.icons8.com/?size=100&id=8068&format=png&color=000000" alt=""></button>
       </div>
     </nav>
+    <div><span id="player-turn"></span><span id="player-turn-word"> Turn</span></div>
     <div id="grille"></div>
 
     <!-- Formulaire de parametre -->
