L'utiliateur peut maintenant modifier les symboles des joeurs et en memes temp il va reseter le local storage

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
       <button id="appliquer">Appliquer</button>
     </div>
 
+    <!-- Formulaire de  choisir les symboles -->
+    <div>
+      <label for="symbole-x">Symbole du joueur 1 : </label>
+      <input type="text" id="symbole-x" value="X" />
+      <label for="symbole-o">Symbole du joueur 2 : </label>
+      <input type="text" id="symbole-o" value="O" />
+      <button id="appliquer-symboles">Appliquer les Symboles</button>
+    </div>
+
     <script src="scripts.js"></script>
   </body>
 </html>
