Indiquer le nombre d'alignements requis (k).

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
       <section class="game-section">
         <div id="grille" class="grid"></div>
         <div class="turn-indicator">
-          <span id="player-turn">X</span>
+          <span id="player-turn"></span>
           <span id="player-turn-word"> Turn</span>
+          <span> | </span>
+          <span id="nbr-lignes-k"></span>
+          <span>Ligne A gagner</span>
         </div>
       </section>
       <section class="settings-section">
